# opengl-sdl

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt  imgui.ini
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
old/cpp/: lesson_1.1_1.5.cpp  lesson_1.6.cpp  lesson_1.7.cpp  lesson_1.8-1.9.cpp  lesson_2.1.cpp
old/shader/: shader_lesson_1.7.frag  shader_lesson_1.7.vs  shader_lesson_1.8.fs  shader_lesson_1.8.vs
shaders/: lightShader.fs  lightShader.vs  lightShader_lesson_2.1.vs  shader.frag  shader.fs  shader.vs  shader_lesson_1.6.frag  shader_lesson_1.6.vs  shader_lesson_2.1.fs  shader_lesson_2.1.vs
src/: CMakeLists.txt  Camera.hpp  Keyboard.cpp  Keyboard.hpp  MySDL.cpp  MySDL.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.hpp  Utils.hpp  lesson_1.6.cpp  lesson_1.8-1.9.cpp  lesson_2.1.cpp  main.cpp
src/Base/: ImageLoad.cpp  ImageLoad.hpp  Shader.cpp  Shader.hpp  TextureLoad.cpp  TextureLoad.hpp
src/Camera/: Camera.cpp  Camera.hpp
src/Filesystem/: Filesystem.cpp  Filesystem.hpp
src/IO/: Keyboard.cpp  Keyboard.hpp
src/Log/: Log.cpp  Log.hpp
src/MySDL/: SDLUtils.cpp
src/Render/: BaseLight.hpp  DirectLight.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PointLight.hpp  SpotLight.hpp  Texture.hpp
src/Render/Light/: BaseLight.hpp  SpotLight.hpp
src/Render/Texture/: Texture.hpp
src/Utils/: Utils.cpp
